--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
   <header>
-    <div class="logo">Sticky Delights</div>
+    <div class="logo">Xôi</div>
     <div class="cart-icon" onclick="openCart()">🛒 <span class="cart-count" id="cart-count">0</span></div>
   </header>
 
